// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`our declared-table reads: the rows (real Postgres) > count — a range: the total 1`] = `2`;

exports[`our declared-table reads: the rows (real Postgres) > count — everything: the total 1`] = `4`;

exports[`our declared-table reads: the rows (real Postgres) > count — filtered: the total 1`] = `2`;

exports[`our declared-table reads: the rows (real Postgres) > count — over a join: the total 1`] = `2`;

exports[`our declared-table reads: the rows (real Postgres) > count — with the search a list applies: the total 1`] = `1`;

exports[`our declared-table reads: the rows (real Postgres) > find — a JSON literal: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a SQL-fragment filter: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a join with every column: the rows 1`] = `
[
  {
    "read_equiv_items": {
      "createdAt": 2026-01-01T00:00:00.000Z,
      "id": 1,
      "isActive": true,
      "localAt": 2026-03-01T10:15:30.500Z,
      "localText": "2026-03-01 10:15:30",
      "meta": {
        "a": 1,
      },
      "note": "by the bed",
      "price": "19.90",
      "publishedAt": 2026-03-01T08:15:30.123Z,
      "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
      "releaseDate": 2026-03-01T00:00:00.000Z,
      "releaseDay": "2026-03-01",
      "stock": 4,
      "tags": [
        "a",
        "b",
      ],
      "title": "Lamp",
      "weight": 1.25,
    },
    "read_equiv_tags": {
      "itemId": 1,
      "label": "sale",
    },
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-01T00:00:00.000Z,
      "id": 1,
      "isActive": true,
      "localAt": 2026-03-01T10:15:30.500Z,
      "localText": "2026-03-01 10:15:30",
      "meta": {
        "a": 1,
      },
      "note": "by the bed",
      "price": "19.90",
      "publishedAt": 2026-03-01T08:15:30.123Z,
      "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
      "releaseDate": 2026-03-01T00:00:00.000Z,
      "releaseDay": "2026-03-01",
      "stock": 4,
      "tags": [
        "a",
        "b",
      ],
      "title": "Lamp",
      "weight": 1.25,
    },
    "read_equiv_tags": {
      "itemId": 1,
      "label": "new",
    },
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-02T00:00:00.000Z,
      "id": 2,
      "isActive": false,
      "localAt": 1999-12-31T23:59:59.000Z,
      "localText": "1999-12-31 23:59:59",
      "meta": null,
      "note": "чугун",
      "price": "0",
      "publishedAt": 1999-12-31T23:59:59.000Z,
      "ref": null,
      "releaseDate": 1999-12-31T00:00:00.000Z,
      "releaseDay": "1999-12-31",
      "stock": 0,
      "tags": {
        "nested": {
          "x": [
            1,
            2,
          ],
        },
      },
      "title": "Желязо",
      "weight": 0,
    },
    "read_equiv_tags": null,
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-03T00:00:00.000Z,
      "id": 3,
      "isActive": null,
      "localAt": null,
      "localText": null,
      "meta": null,
      "note": null,
      "price": null,
      "publishedAt": null,
      "ref": null,
      "releaseDate": null,
      "releaseDay": null,
      "stock": null,
      "tags": null,
      "title": null,
      "weight": null,
    },
    "read_equiv_tags": null,
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-04T00:00:00.000Z,
      "id": 4,
      "isActive": true,
      "localAt": 2026-06-30T23:00:00.000Z,
      "localText": "2026-06-30 23:00:00",
      "meta": [
        1,
        "x",
      ],
      "note": null,
      "price": "100000000000.000001",
      "publishedAt": 2026-06-30T23:00:00.000Z,
      "ref": "00000000-0000-0000-0000-000000000000",
      "releaseDate": 2026-06-30T00:00:00.000Z,
      "releaseDay": "2026-06-30",
      "stock": 12,
      "tags": [],
      "title": "Chair",
      "weight": 3.5,
    },
    "read_equiv_tags": {
      "itemId": 4,
      "label": "sale",
    },
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a range: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a search over two columns: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a search: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a set: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — a timestamp: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — an empty set: the rows 1`] = `[]`;

exports[`our declared-table reads: the rows (real Postgres) > find — an inner join: the rows 1`] = `
[
  {
    "read_equiv_items": {
      "createdAt": 2026-01-01T00:00:00.000Z,
      "id": 1,
      "isActive": true,
      "localAt": 2026-03-01T10:15:30.500Z,
      "localText": "2026-03-01 10:15:30",
      "meta": {
        "a": 1,
      },
      "note": "by the bed",
      "price": "19.90",
      "publishedAt": 2026-03-01T08:15:30.123Z,
      "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
      "releaseDate": 2026-03-01T00:00:00.000Z,
      "releaseDay": "2026-03-01",
      "stock": 4,
      "tags": [
        "a",
        "b",
      ],
      "title": "Lamp",
      "weight": 1.25,
    },
    "read_equiv_tags": {
      "itemId": 1,
      "label": "sale",
    },
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-01T00:00:00.000Z,
      "id": 1,
      "isActive": true,
      "localAt": 2026-03-01T10:15:30.500Z,
      "localText": "2026-03-01 10:15:30",
      "meta": {
        "a": 1,
      },
      "note": "by the bed",
      "price": "19.90",
      "publishedAt": 2026-03-01T08:15:30.123Z,
      "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
      "releaseDate": 2026-03-01T00:00:00.000Z,
      "releaseDay": "2026-03-01",
      "stock": 4,
      "tags": [
        "a",
        "b",
      ],
      "title": "Lamp",
      "weight": 1.25,
    },
    "read_equiv_tags": {
      "itemId": 1,
      "label": "new",
    },
  },
  {
    "read_equiv_items": {
      "createdAt": 2026-01-04T00:00:00.000Z,
      "id": 4,
      "isActive": true,
      "localAt": 2026-06-30T23:00:00.000Z,
      "localText": "2026-06-30 23:00:00",
      "meta": [
        1,
        "x",
      ],
      "note": null,
      "price": "100000000000.000001",
      "publishedAt": 2026-06-30T23:00:00.000Z,
      "ref": "00000000-0000-0000-0000-000000000000",
      "releaseDate": 2026-06-30T00:00:00.000Z,
      "releaseDay": "2026-06-30",
      "stock": 12,
      "tags": [],
      "title": "Chair",
      "weight": 3.5,
    },
    "read_equiv_tags": {
      "itemId": 4,
      "label": "sale",
    },
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — an order expression: the rows 1`] = `
[
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — empty where: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — equality: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — everything: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — null: the rows 1`] = `
[
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — order string: the rows 1`] = `
[
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — order, limit, offset: the rows 1`] = `
[
  {
    "createdAt": 2026-01-03T00:00:00.000Z,
    "id": 3,
    "isActive": null,
    "localAt": null,
    "localText": null,
    "meta": null,
    "note": null,
    "price": null,
    "publishedAt": null,
    "ref": null,
    "releaseDate": null,
    "releaseDay": null,
    "stock": null,
    "tags": null,
    "title": null,
    "weight": null,
  },
  {
    "createdAt": 2026-01-02T00:00:00.000Z,
    "id": 2,
    "isActive": false,
    "localAt": 1999-12-31T23:59:59.000Z,
    "localText": "1999-12-31 23:59:59",
    "meta": null,
    "note": "чугун",
    "price": "0",
    "publishedAt": 1999-12-31T23:59:59.000Z,
    "ref": null,
    "releaseDate": 1999-12-31T00:00:00.000Z,
    "releaseDay": "1999-12-31",
    "stock": 0,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
    "weight": 0,
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — picked columns over a join: the rows 1`] = `
[
  {
    "id": 4,
    "title": "Chair",
  },
  {
    "id": 1,
    "title": "Lamp",
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — picked columns: the rows 1`] = `
[
  {
    "id": 1,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
  },
  {
    "id": 2,
    "tags": {
      "nested": {
        "x": [
          1,
          2,
        ],
      },
    },
    "title": "Желязо",
  },
  {
    "id": 3,
    "tags": null,
    "title": null,
  },
  {
    "id": 4,
    "tags": [],
    "title": "Chair",
  },
]
`;

exports[`our declared-table reads: the rows (real Postgres) > find — several conditions: the rows 1`] = `
[
  {
    "createdAt": 2026-01-01T00:00:00.000Z,
    "id": 1,
    "isActive": true,
    "localAt": 2026-03-01T10:15:30.500Z,
    "localText": "2026-03-01 10:15:30",
    "meta": {
      "a": 1,
    },
    "note": "by the bed",
    "price": "19.90",
    "publishedAt": 2026-03-01T08:15:30.123Z,
    "ref": "a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11",
    "releaseDate": 2026-03-01T00:00:00.000Z,
    "releaseDay": "2026-03-01",
    "stock": 4,
    "tags": [
      "a",
      "b",
    ],
    "title": "Lamp",
    "weight": 1.25,
  },
  {
    "createdAt": 2026-01-04T00:00:00.000Z,
    "id": 4,
    "isActive": true,
    "localAt": 2026-06-30T23:00:00.000Z,
    "localText": "2026-06-30 23:00:00",
    "meta": [
      1,
      "x",
    ],
    "note": null,
    "price": "100000000000.000001",
    "publishedAt": 2026-06-30T23:00:00.000Z,
    "ref": "00000000-0000-0000-0000-000000000000",
    "releaseDate": 2026-06-30T00:00:00.000Z,
    "releaseDay": "2026-06-30",
    "stock": 12,
    "tags": [],
    "title": "Chair",
    "weight": 3.5,
  },
]
`;

exports[`our declared-table reads: the statement > count — a range: the statement 1`] = `
[
  {
    "params": [
      1,
    ],
    "text": "select count(*) from "read_equiv_items" where "read_equiv_items"."stock" >= $1",
  },
]
`;

exports[`our declared-table reads: the statement > count — everything: the statement 1`] = `
[
  {
    "params": [],
    "text": "select count(*) from "read_equiv_items"",
  },
]
`;

exports[`our declared-table reads: the statement > count — filtered: the statement 1`] = `
[
  {
    "params": [
      true,
    ],
    "text": "select count(*) from "read_equiv_items" where "read_equiv_items"."is_active" = $1",
  },
]
`;

exports[`our declared-table reads: the statement > count — over a join: the statement 1`] = `
[
  {
    "params": [
      "sale",
    ],
    "text": "select count(*) from "read_equiv_items" left join "read_equiv_tags" on "read_equiv_items"."id" = "read_equiv_tags"."item_id" where "read_equiv_tags"."label" = $1",
  },
]
`;

exports[`our declared-table reads: the statement > count — with the search a list applies: the statement 1`] = `
[
  {
    "params": [
      true,
      "%am%",
    ],
    "text": "select count(*) from "read_equiv_items" where ("read_equiv_items"."is_active" = $1 and "read_equiv_items"."title" ilike $2)",
  },
]
`;

exports[`our declared-table reads: the statement > find — a JSON literal: the statement 1`] = `
[
  {
    "params": [
      "["a","b"]",
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."tags" = $1",
  },
]
`;

exports[`our declared-table reads: the statement > find — a SQL-fragment filter: the statement 1`] = `
[
  {
    "params": [
      4,
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."stock" = $1",
  },
]
`;

exports[`our declared-table reads: the statement > find — a join with every column: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "read_equiv_items"."id", "read_equiv_items"."title", "read_equiv_items"."note", "read_equiv_items"."stock", "read_equiv_items"."price", "read_equiv_items"."weight", "read_equiv_items"."is_active", "read_equiv_items"."published_at", "read_equiv_items"."local_at", "read_equiv_items"."local_text", "read_equiv_items"."release_day", "read_equiv_items"."release_date", "read_equiv_items"."meta", "read_equiv_items"."tags", "read_equiv_items"."ref", "read_equiv_items"."created_at", "read_equiv_tags"."item_id", "read_equiv_tags"."label" from "read_equiv_items" left join "read_equiv_tags" on "read_equiv_items"."id" = "read_equiv_tags"."item_id" order by "read_equiv_items"."id" asc",
  },
]
`;

exports[`our declared-table reads: the statement > find — a range: the statement 1`] = `
[
  {
    "params": [
      1,
      10,
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where ("read_equiv_items"."stock" >= $1 and "read_equiv_items"."stock" <= $2)",
  },
]
`;

exports[`our declared-table reads: the statement > find — a search over two columns: the statement 1`] = `
[
  {
    "params": [
      "%a%",
      "%a%",
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where ("read_equiv_items"."title" ilike $1 or "read_equiv_items"."note" ilike $2)",
  },
]
`;

exports[`our declared-table reads: the statement > find — a search: the statement 1`] = `
[
  {
    "params": [
      true,
      "%am%",
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where ("read_equiv_items"."is_active" = $1 and "read_equiv_items"."title" ilike $2)",
  },
]
`;

exports[`our declared-table reads: the statement > find — a set: the statement 1`] = `
[
  {
    "params": [
      1,
      3,
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."id" in ($1, $2)",
  },
]
`;

exports[`our declared-table reads: the statement > find — a timestamp: the statement 1`] = `
[
  {
    "params": [
      "2026-04-01T00:00:00.000Z",
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."published_at" < $1",
  },
]
`;

exports[`our declared-table reads: the statement > find — an empty set: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where 1 = 0",
  },
]
`;

exports[`our declared-table reads: the statement > find — an inner join: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "read_equiv_items"."id", "read_equiv_items"."title", "read_equiv_items"."note", "read_equiv_items"."stock", "read_equiv_items"."price", "read_equiv_items"."weight", "read_equiv_items"."is_active", "read_equiv_items"."published_at", "read_equiv_items"."local_at", "read_equiv_items"."local_text", "read_equiv_items"."release_day", "read_equiv_items"."release_date", "read_equiv_items"."meta", "read_equiv_items"."tags", "read_equiv_items"."ref", "read_equiv_items"."created_at", "read_equiv_tags"."item_id", "read_equiv_tags"."label" from "read_equiv_items" inner join "read_equiv_tags" on "read_equiv_items"."id" = "read_equiv_tags"."item_id"",
  },
]
`;

exports[`our declared-table reads: the statement > find — an order expression: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" order by "read_equiv_items"."id" desc",
  },
]
`;

exports[`our declared-table reads: the statement > find — empty where: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items"",
  },
]
`;

exports[`our declared-table reads: the statement > find — equality: the statement 1`] = `
[
  {
    "params": [
      "Lamp",
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."title" = $1",
  },
]
`;

exports[`our declared-table reads: the statement > find — everything: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items"",
  },
]
`;

exports[`our declared-table reads: the statement > find — null: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where "read_equiv_items"."title" is null",
  },
]
`;

exports[`our declared-table reads: the statement > find — order string: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" order by "stock" desc, "title" asc",
  },
]
`;

exports[`our declared-table reads: the statement > find — order, limit, offset: the statement 1`] = `
[
  {
    "params": [
      2,
      1,
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" order by "created_at" desc limit $1 offset $2",
  },
]
`;

exports[`our declared-table reads: the statement > find — picked columns over a join: the statement 1`] = `
[
  {
    "params": [
      "sale",
    ],
    "text": "select "read_equiv_items"."id", "read_equiv_items"."title" from "read_equiv_items" left join "read_equiv_tags" on "read_equiv_items"."id" = "read_equiv_tags"."item_id" where "read_equiv_tags"."label" = $1 order by "read_equiv_items"."id" desc",
  },
]
`;

exports[`our declared-table reads: the statement > find — picked columns: the statement 1`] = `
[
  {
    "params": [],
    "text": "select "id", "title", "tags" from "read_equiv_items"",
  },
]
`;

exports[`our declared-table reads: the statement > find — several conditions: the statement 1`] = `
[
  {
    "params": [
      true,
      0,
      50,
    ],
    "text": "select "id", "title", "note", "stock", "price", "weight", "is_active", "published_at", "local_at", "local_text", "release_day", "release_date", "meta", "tags", "ref", "created_at" from "read_equiv_items" where ("read_equiv_items"."is_active" = $1 and "read_equiv_items"."stock" > $2) order by "id" asc limit $3",
  },
]
`;
